--- a/Estudiante.html
+++ b/Estudiante.html
@@ -1,2 +1,18 @@
 # Estudiante
-Mi primera página
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Alumno
+        </title>
+        <link rel="stylesheet" type="text/css" href="Alan1.css">
+
+    </head>
+    <body>
+        <h1>¿Quien soy?</h1>
+
+        <li>nombre</li>
+        <li>Estatura</li>
+        <li>Edad</li>
+    </body>
+</html>
